<resources>
    <string name="app_name">News app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bbc">BBC</string>
    <string name="avp">AVP</string>
    <string name="upcomming">Upcomming</string>
    <string name="rajasthan_news">Rajasthan News</string>
    <string name="aaj_tak">AAJ Tak News </string>
    <string name="fox_news">Fox News</string>
    <string name="abp">ABP News</string>
    <string name="contact">Contact us</string>
</resources>